feat(data-exploration): Update data exploration

--- a/journal-de-bord.ipynb
+++ b/journal-de-bord.ipynb
@@ -38,6 +38,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 📅 Journal de bord – Jour 2 (11/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées\n",
+    "- Analyse en profondeur des données\n",
+    "- Nettoyage du dataset\n",
+    "- Récupération de la column target\n",
+    "\n",
+    "### 📝 Observations / Difficultés\n",
+    "- Jeu de données complet avec seulement quelques colonnes non utilisables\n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- Continuer l'analyse en profondeur pour émètre des hypothèses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 📅 Journal de bord – Jour 2 ()\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
@@ -56,6 +81,11 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
