feat(notebook): Finalise notebook

--- a/journal-de-bord.ipynb
+++ b/journal-de-bord.ipynb
@@ -63,16 +63,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📅 Journal de bord – Jour 2 ()\n",
+    "## 📅 Journal de bord – Jour 3 (17/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
-    "- \n",
+    "- Finalisation de l'analyse en profondeur\n",
+    "- Emission d'hypothèses\n",
     "\n",
     "### 📝 Observations / Difficultés\n",
-    "- \n",
+    "- La majorité des hypothèses s'avèrent valides\n",
     "\n",
     "### ✅ Prochaines étapes\n",
-    "- "
+    "- Mettre en forme le notebook"
    ]
   },
   {
@@ -85,7 +86,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 📅 Journal de bord – Jour 4 (18/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées\n",
+    "- Mise en forme du notebook\n",
+    "- Tentative d'agregation des données\n",
+    "\n",
+    "### 📝 Observations / Difficultés\n",
+    "- \n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📅 Journal de bord – Jour 4 (18/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées\n",
+    "- \n",
+    "\n",
+    "### 📝 Observations / Difficultés\n",
+    "- \n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
