--- a/journal-de-bord.ipynb
+++ b/journal-de-bord.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📅 Journal de bord – Jour 1 (10/07/2025)\n",
+    "## 📅 Jour 1 (10/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
     "- Définition d'un environnement de travail (.venv)\n",
@@ -23,8 +23,8 @@
     "- Certains fichiers ne sont pas formatés correctement.\n",
     "\n",
     "### ✅ Prochaines étapes\n",
-    "- Trouver ma column target\n",
-    "- Continuer d'explorer mes données\n"
+    "- Trouver la column target\n",
+    "- Continuer d'explorer les données\n"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📅 Journal de bord – Jour 2 (11/07/2025)\n",
+    "## 📅 Jour 2 (11/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
     "- Analyse en profondeur des données\n",
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📅 Journal de bord – Jour 3 (17/07/2025)\n",
+    "## 📅 Jour 3 (17/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
     "- Finalisation de l'analyse en profondeur\n",
@@ -87,11 +87,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📅 Journal de bord – Jour 4 (18/07/2025)\n",
+    "## 📅 Jour 4 (18/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
     "- Mise en forme du notebook\n",
-    "- Tentative d'agregation des données\n",
+    "- Tentative d'agregation des données (car au final, l'analyse sur un seul fichier 01_2016 peut biaiser mon analyse)\n",
+    "\n",
+    "### 📝 Observations / Difficultés\n",
+    "- Les données ne sont pas formatées correctement et ont besoin d'être retravaillées\n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- Corriger l'agragation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📅 Jour 5 (21/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées\n",
+    "- Reprise de l'analyse avec l'ensemble des données nettoyées et corrigées\n",
+    "- Émission de nouvelles hypothèses\n",
+    "- Ajout d'une heatmap de corrélation\n",
+    "\n",
+    "### 📝 Observations / Difficultés\n",
+    "- Beaucoup de colonnes supprimées car non éthiques ou non conformes \n",
+    "- Effectivement, le mois a un impact sur le retard d'un avion, l'agrégation des données était importante\n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- Implementer l'architecture de l'application. Et plus particulièrement, insérer les données dans une BDD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📅 Jour 6 (22/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées\n",
+    "- \n",
     "\n",
     "### 📝 Observations / Difficultés\n",
     "- \n",
@@ -103,18 +152,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 📅 Journal de bord – Jour 4 (18/07/2025)\n",
-    "\n",
-    "### 🔧 Étapes / Actions réalisées\n",
-    "- \n",
-    "\n",
-    "### 📝 Observations / Difficultés\n",
-    "- \n",
-    "\n",
-    "### ✅ Prochaines étapes\n",
-    "- "
-   ]
+   "source": []
   }
  ],
  "metadata": {
