Fix(analysis): Update description H4

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -217,7 +217,7 @@
     "- ✅ H3 : Retards selon l'aéroport d’origine (ORIGIN)\n",
     "- ✅ H4 : Retards selon le jour de la semaine (DAY_OF_WEEK)\n",
     "- ✅ H5 : Retards selon le mois (MONTH)\n",
-    "- ❌ H6 : Plus la distance d’un vol est grande, plus il a de risques d’être en retard (DISTANCE_GROUP)"
+    "- 🟡 H6 : Plus la distance d’un vol est grande, plus il a de risques d’être en retard (DISTANCE_GROUP)"
    ]
   },
   {
@@ -3176,18 +3176,9 @@
     "\n",
     "On observe :\n",
     "\n",
-    "- Des pics de retard entre :\n",
-    "\n",
-    "  - 20h00–22h59 (~21 %)\n",
-    "  - 23h00–00h59 (~20 %)\n",
-    "\n",
-    "- Des creux sur les créneaux matinaux :\n",
-    "  \n",
-    "  - 06h00–07h59 (~10 %)\n",
-    "  - 08h00–09h59 (~12–13 %)\n",
-    "\n",
-    "- Les vols du soir sont plus sujets aux retards : probable effet d’accumulation des retards tout au long de la journée.\n",
-    "- Les vols du matin sont plus ponctuels : la chaîne d’exploitation démarre \"propre\", sans effet domino."
+    "- Le jeudi (4) et le vendredi (5) affichent les taux de retard les plus élevés (~19-20%)\n",
+    "- Le samedi (6) a le taux le plus bas (~15%)\n",
+    "- Les autres jours sont intermédiaires (~16-18%)"
    ]
   },
   {
