feat(docker): Implement docker

--- a/journal-de-bord.ipynb
+++ b/journal-de-bord.ipynb
@@ -140,19 +140,32 @@
     "## 📅 Jour 6 (22/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
-    "- \n",
+    "- Mise en place de la BDD relationnelle (trois tables : Flights, Airlines, Airports)\n",
     "\n",
     "### 📝 Observations / Difficultés\n",
-    "- \n",
+    "- Volume de données trop important. Les traitements sont compliqués\n",
     "\n",
     "### ✅ Prochaines étapes\n",
-    "- "
+    "- Mettre en place les modèles de prediction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 📅 Jour 7 (23/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées\n",
+    "- Mise en place partiel des modèles. Encore des intérogations sur le choix des features et la pertinence de la bdd relationnel\n",
+    "- Mise en place de l'api (prediction + healthcheck)\n",
+    "  \n",
+    "### 📝 Observations / Difficultés\n",
+    "- Volume de données trop important. L'entrainement est compliqué\n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- Mettre en place une bdd plus petite\n",
+    "- Terminer l'entrainement des modèles"
+   ]
   }
  ],
  "metadata": {
