feat(journal): Update journal de bord

--- a/journal-de-bord.ipynb
+++ b/journal-de-bord.ipynb
@@ -153,6 +153,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 📅 Jour 7 (23/07/2025)\n",
     "\n",
     "### 🔧 Étapes / Actions réalisées\n",
@@ -165,6 +172,33 @@
     "### ✅ Prochaines étapes\n",
     "- Mettre en place une bdd plus petite\n",
     "- Terminer l'entrainement des modèles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📅 Jour 8 (24/07/2025)\n",
+    "\n",
+    "### 🔧 Étapes / Actions réalisées*\n",
+    "- Finalisation de l'environnement docker\n",
+    "- Mise en places des github actions avec docker hub\n",
+    "- Entrainement des models avec plusieurs traitement de données\n",
+    "- Mise à jour du README\n",
+    "  \n",
+    "### 📝 Observations / Difficultés\n",
+    "- Il me manque une api pour la base de données. afin de réqueter les aéroports par id et non par code\n",
+    "- Performance max de mon modèle - 65% de précisions & 3% de F1 score\n",
+    "\n",
+    "### ✅ Prochaines étapes\n",
+    "- /"
    ]
   }
  ],
